--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "http-server": "^14.1.1"
   }
 }
