--- a/.clineignore
+++ b/.clineignore
@@ -4,8 +4,8 @@ node_modules/
 .output/
 
 # 大量記事・画像は初期読み込みから外す
-content/articles/**/*.md
-content/articles/**/images/
+# content/articles/**/*.md
+# content/articles/**/images/
 
 # ビルドアーティファクト
 dist/
