--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [".nuxt", "node_modules", "dist", ".output"]
+    "ignore": [
+      ".nuxt",
+      "node_modules",
+      "dist",
+      ".output",
+      "**/*.md"
+    ]
   },
   "formatter": {
     "enabled": true,
