--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Checkout private blog content
+        uses: actions/checkout@v4
+        with:
+          repository: hisaro/wwh-blog-content
+          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+          path: ./content
+          clean: true
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
