fix: パッケージ更新とlinter適用（壊れるかも）

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,8 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
+    "includes": ["**/*.js", "**/*.ts", "**/*.vue", "**/*.json"],
+    "experimentalScannerIgnores": [
       ".nuxt",
       "node_modules",
       "dist",
@@ -19,9 +20,6 @@
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2
-  },
-  "organizeImports": {
-    "enabled": true
   },
   "linter": {
     "enabled": true,
