--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "biome lint"
   },
   "dependencies": {
-    "@nuxt/content": "^2.12.1",
+    "@nuxt/content": "^3.6.3",
+    "better-sqlite3": "^12.2.0",
     "glob": "^10.4.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
