Revert "fix: パッケージ更新とlinter適用（壊れるかも）"
This reverts commit 972515262b5f00cc696820df2623d48222d7c581.

--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.js", "**/*.ts", "**/*.vue", "**/*.json"],
-    "experimentalScannerIgnores": [
+    "ignore": [
       ".nuxt",
       "node_modules",
       "dist",
@@ -20,6 +19,9 @@
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2
+  },
+  "organizeImports": {
+    "enabled": true
   },
   "linter": {
     "enabled": true,
