--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@nuxtjs/sitemap": "^7.5.0",
     "glob": "^10.4.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
